# rust-ml-sagemaker

./: LICENSE  README.md  TODO.md  env.example
linfa/: Cargo.toml  Makefile  README.md  train_and_deploy.ipynb
smartcore/: Cargo.toml  Dockerfile  Makefile  README.md  train_and_deploy.ipynb
smartcore/test_dir/model/: model.bincode
