[package]
name = "sagemaker-linfa-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/bin/train.rs"
[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dependencies]
actix-web = "4.1.0"
bincode = "1.3.3"
csv = "1.1.6"
linfa = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
linfa-trees = { version = "0.7.0", features = ["serde"] }
log = "0.4.17"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde = "1.0.143"
simple_logger = "2.3.0"
