[package]
name = "sagemaker-smartcore-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/bin/train.rs"
[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dependencies]
actix-web = "4.1.0"
bincode = "1.3.3"
csv = "1.1.6"
log = "0.4.17"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
serde = "1.0.143"
simple_logger = "2.3.0"
smartcore = {version="0.2.1", features=["ndarray-bindings", "serde"]}
